terraform/k8/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votes-ui
  namespace: peek
  labels:
    app: votes-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votes-ui
  template:
    metadata:
      name: votes-ui
      labels:
        app: votes-ui
    spec:
      containers:
        - name: votes-ui
          image: peek-votes-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
