terraform/k8/votes-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votes-api
  namespace: peek
  labels:
    app: votes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votes-api
  template:
    metadata:
      name: votes-api
      labels:
        app: votes-api
    spec:
      containers:
        - name: votes-api
          image: peek-votes-api:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
