terraform/k8/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: peek
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend
