terraform/k8/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: votes-ui-service
  namespace: peek
  labels:
    app: votes-ui
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: votes-ui
