terraform/k8/votes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votes-ingress
  namespace: peek
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: votes-api-service
                port:
                  number: 8080
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: votes-ui-service
                port:
                  number: 80
